--- a/backend/package.json
+++ b/backend/package.json
@@ -24,11 +24,14 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "mongoose": "^5.9.5",
+    "@nestjs/platform-express": "^7.0.6",
+    "@nestjs/typeorm": "^7.0.0",
+    "mongoose": "^5.9.6",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
