--- a/backend/package.json
+++ b/backend/package.json
@@ -26,8 +26,12 @@
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^7.0.6",
     "@nestjs/typeorm": "^7.0.0",
+    "express": "^4.17.1",
     "mongoose": "^5.9.6",
     "mysql": "^2.18.1",
+    "nestjs-redis": "^1.2.7",
+    "nodemailer": "^6.4.6",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
