--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,9 @@
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^7.0.6",
     "@nestjs/typeorm": "^7.0.0",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.9.6",
     "mysql": "^2.18.1",
     "nestjs-redis": "^1.2.7",
@@ -36,7 +38,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "socket.io": "^2.3.0",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
