--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,11 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^7.0.6",
+    "@nestjs/swagger": "^4.5.3",
     "@nestjs/typeorm": "^7.0.0",
     "axios": "^0.19.2",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.6",
     "mysql": "^2.18.1",
     "nestjs-redis": "^1.2.7",
@@ -39,10 +40,12 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "socket.io": "^2.3.0",
+    "swagger-ui-express": "^4.1.4",
     "typeorm": "^0.2.24",
     "unirest": "^0.6.0"
   },
   "devDependencies": {
+    "@nest/testing": "^4.5.4",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
