--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "echarts": "^4.7.0",
     "element-ui": "^2.13.0",
+    "html2canvas": "^1.0.0-rc.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
